k8s/Modulo 34/deployed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "5"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"fastapi-app","namespace":"default"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"fastapi-app"}},"template":{"metadata":{"labels":{"app":"fastapi-app"}},"spec":{"containers":[{"image":"fastapi-app:v2","imagePullPolicy":"IfNotPresent","name":"fastapi-app","ports":[{"containerPort":8000}],"resources":{"limits":{"cpu":"500m","memory":"512Mi"},"requests":{"cpu":"100m","memory":"128Mi"}}}]}}}}
  creationTimestamp: "2026-03-11T12:06:21Z"
  generation: 5
  name: fastapi-app
  namespace: default
  resourceVersion: "7220"
  uid: fa754b90-b73c-4f61-8ac5-8da1bffeb1ba
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: fastapi-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-03-11T10:00:12-03:00"
      labels:
        app: fastapi-app
    spec:
      containers:
      - image: fastapi-app:v2
        imagePullPolicy: IfNotPresent
        name: fastapi-app
        ports:
        - containerPort: 8000
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2026-03-11T13:07:27Z"
    lastUpdateTime: "2026-03-11T13:07:27Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2026-03-11T12:32:27Z"
    lastUpdateTime: "2026-03-11T13:28:31Z"
    message: ReplicaSet "fastapi-app-765f56d79b" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 5
  replicas: 3
  terminatingReplicas: 0
  unavailableReplicas: 3
  updatedReplicas: 2
